--- a/archive.html
+++ b/archive.html
@@ -31,6 +31,12 @@ a {
 
 }
 
+.center{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+
+}
 /* The actual timeline (the vertical ruler) */
 .timeline::after {
   content: '';
@@ -151,8 +157,8 @@ a {
 </style>
 </head>
 <body>
-<img src="https://i.postimg.cc/NM2C82f5/lewislogo.png" alt="Italian Trulli">
-<h3> Lewis Univeristy's Archived Newspapers</h3>
+<img src="https://i.postimg.cc/NM2C82f5/lewislogo.png" alt="Italian Trulli" class="center">
+<h3 align="center"> Lewis Univeristy's Archived Newspapers</h3>
 <div class="timeline">
   <div class="container left">
     <div class="content">
@@ -271,3 +277,4 @@ a {
 </div>
 </body>
 </html>
+
